<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipe_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="3dp"
    card_view:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/recipe_item_image"
            android:layout_width="150dp"
            android:layout_height="175dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:src="@drawable/cake" />

        <TextView
            android:id="@+id/recipe_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:gravity="center"
            android:text="Title"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="@dimen/medium_text" />
    </LinearLayout>
</android.support.v7.widget.CardView>