...
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TextView
            android:id="@+id/step_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:gravity="center"
...
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/next_step_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_chevron_right" />
...
