<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/layout_margin"
    android:layout_marginRight="@dimen/layout_margin">

    <TextView
        android:id="@+id/step_item_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:gravity="center"
        android:text="Title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/medium_text"
        android:textStyle="bold" />
</FrameLayout>